tests/good/07_div_mod.src
# Test: Division and modulo
# Expected: 7
void main() {
    print_int(17 / 3 + 17 % 3);
}
